--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -83,7 +83,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 425px;
+  height: 420px;
 }
 
 .banner-flex {
@@ -95,7 +95,7 @@ body {
 .banner {
   position: relative;
   height: 350px;
-  width: 1000px;
+  width: 1100px;
   box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
   border-radius: 20px;
 }
@@ -125,6 +125,28 @@ body {
 
 .dot-active {
   color: white;
+}
+
+/* ----------HOME EVENTS---------- */
+
+.local-event-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 250px;
+}
+
+.local-events-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.local-events {
+  height: 275px;
+  width: 1250px;
+  box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+  border-radius: 20px;
 }
 
 /* ----------PSEUDO CLASSES---------- */
