--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #292826;
-  height: 60px;
+  height: 55px;
   padding: 0 60px;
 }
 
@@ -41,11 +41,14 @@ body {
   align-items: center;
 }
 
-.nav-links > a {
+.pages {
   font-family: "ATF Franklin Gothic", sans-serif;
   text-decoration: none;
   color: white;
   margin: 0 10px;
+  padding-bottom: 2px;
+  border-bottom: 3px solid #292826;
+  transition: 0.4s ease-in-out;
 }
 
 .search-container {
@@ -83,7 +86,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 420px;
+  height: 415px;
 }
 
 .banner-flex {
@@ -95,7 +98,7 @@ body {
 .banner {
   position: relative;
   height: 350px;
-  width: 1100px;
+  width: 1000px;
   box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
   border-radius: 20px;
 }
@@ -144,16 +147,15 @@ body {
 
 .local-events {
   height: 275px;
-  width: 1250px;
-  box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+  width: 1300px;
+  border: 2px solid black;
   border-radius: 20px;
 }
 
 /* ----------PSEUDO CLASSES---------- */
 
-.page:hover {
-  padding-bottom: 2px;
-  border-bottom: 2px solid white;
+.pages:hover {
+  border-bottom-color: white;
 }
 
 .searchbar:focus {
