--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -195,12 +195,29 @@ body {
   width: 100%;
   object-fit: cover;
   user-select: none;
+  border-bottom: 1px solid #292826;
+}
+
+.local-event-info-container {
+  width: 280px;
+  height: 100px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .local-event-title {
   font-family: Montserrat, sans-serif;
   margin: 0;
-  padding: 5px;
+  padding-top: 8px;
+  font-size: 14px;
+  text-align: center;
+}
+
+.local-event-venue {
+  font-family: Montserrat, sans-serif;
+  color: gray;
+  margin: 0;
+  padding: 3px;
   font-size: 12px;
   text-align: center;
 }
