Change search button to an anchor tag that is styled as a button. #2

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -75,6 +75,9 @@ body {
   right: 0;
   top: 1px;
   user-select: none;
+  text-decoration: none;
+  padding: 4px 10px 0;
+  color: black;
 }
 
 /* ----------HOME BANNER---------- */
