--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -266,7 +266,7 @@ body {
   width: 1200px;
   height: 800px;
   box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
-  border-radius: 20px;
+  border-radius: 20px 20px 0;
 }
 
 .search-results-image {
@@ -374,6 +374,56 @@ body {
   font-weight: bold;
 }
 
+/* ----------EVENT VIEW---------- */
+
+.event-info-layout-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 700px;
+}
+
+.event-info-layout-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.event-info-container {
+  position: relative;
+  width: 600px;
+  height: 600px;
+  box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+  border-radius: 20px;
+}
+
+.event-info-image {
+  flex-basis: 20%;
+  height: 100px;
+  border-top-left-radius: 20px;
+  object-fit: cover;
+  user-select: none;
+}
+
+.event-info-header-text-container {
+  height: 100px;
+  flex-basis: 80%;
+  display: flex;
+  background-color: #292826;
+  justify-content: center;
+  align-items: center;
+  border-top-right-radius: 20px;
+}
+
+.event-info-header-text {
+  font-family: Montserrat, sans-serif;
+  font-size: 38px;
+  font-weight: bold;
+  margin: 0;
+  user-select: none;
+  color: #f4563c;
+}
+
 /* ----------FOOTER---------- */
 
 .footer-container {
@@ -384,6 +434,7 @@ body {
   height: 30px;
   padding: 0 60px;
   margin-top: 50px;
+  flex-shrink: 0;
 }
 
 /* ----------PSEUDO CLASSES---------- */
