--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -319,7 +319,7 @@ body {
   overflow-y: auto;
 }
 
-.test {
+.rendered-event {
   border: 1px solid black;
   cursor: pointer;
 }
@@ -446,6 +446,8 @@ body {
 }
 
 .event-card-title {
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
   text-align: center;
   font-size: 28px;
 }
@@ -559,4 +561,8 @@ body {
 
 .save-event-btn:hover {
   background-color: rgb(80 200 120 / 80%);
+}
+
+.rendered-event:hover {
+  border: 1px solid #f4563c;
 }
