--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -521,6 +521,55 @@ body {
   color: white;
 }
 
+/* ----------SAVED EVENTS VIEW---------- */
+
+.saved-events-layout-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 850px;
+}
+
+.saved-events-layout-flex {
+  display: flex;
+  width: 1250px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.saved-events-container {
+  width: 600px;
+  height: 700px;
+  background-color: white;
+  box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+  border-radius: 20px;
+}
+
+.itinerary-container {
+  width: 600px;
+  height: 700px;
+  background-color: white;
+  box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+  border-radius: 20px;
+}
+
+.saved-events-list-container {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  background-color: #292826;
+  justify-content: center;
+  align-items: center;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.saved-events-list-container > h2 {
+  font-family: Montserrat, sans-serif;
+  font-weight: bold;
+  color: #f4563c;
+}
+
 /* ----------FOOTER---------- */
 
 .footer-container {
