--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -86,66 +86,50 @@ body {
 
 /* ----------HOME EVENTS---------- */
 
-.local-events-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.le-lyt-ctr {
   height: 400px;
 }
 
-.local-events-flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.local-events {
+.le-ctr {
   height: 400px;
   width: 1300px;
-  border-radius: 20px;
 }
 
-.local-events-header {
+.le-hdr {
   font-family: Montserrat, sans-serif;
   font-weight: 700;
   font-size: 26px;
   margin-top: 0;
 }
 
-.local-events-card-container {
+.le-card-ctr {
   display: flex;
   align-content: center;
-  margin: 0 50px;
-  height: 360px;
   width: 1300px;
+  height: 360px;
+  margin: 0 50px;
   padding: 20px 0;
   overflow-y: hidden;
   overflow-x: auto;
 }
 
-.event-card-container {
-  position: relative;
+.event-card-ctr {
   cursor: pointer;
   flex-shrink: 0;
   width: 280px;
   height: 300px;
   margin: 0 20px;
   box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
-  border-radius: 20px;
   transform: scale(1);
   transition-duration: 0.5s;
 }
 
-.event-image-container {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+.event-image-ctr {
   width: 280px;
   height: 200px;
 }
 
-.event-image-container > img {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+.event-image-ctr > img {
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -153,54 +137,46 @@ body {
   border-bottom: 1px solid #292826;
 }
 
-.local-event-info-container {
+.le-info-ctr {
   width: 280px;
   height: 100px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
   padding: 5px 15px;
 }
 
-.local-event-time-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.local-event-time {
+.le-time-date {
   font-family: Montserrat, sans-serif;
-  color: black;
-  margin: 0;
   font-size: 10px;
+  color: black;
   text-align: start;
+  margin: 0;
 }
 
-.local-event-title {
+.le-title {
   font-family: Montserrat, sans-serif;
   margin: 0;
   font-size: 14px;
-  text-align: center;
   padding-top: 5px;
+  text-align: center;
 }
 
-.local-event-venue {
+.le-venue {
   font-family: Montserrat, sans-serif;
   color: gray;
-  margin: 0;
   font-size: 12px;
-  text-align: center;
+  margin: 0;
   padding-top: 3px;
+  text-align: center;
 }
 
-.local-event-location {
-  position: absolute;
+.le-location {
   font-family: Montserrat, sans-serif;
-  margin: 0;
+  color: gray;
   font-size: 10px;
+  margin: 0;
   text-align: end;
   padding-top: 3px;
   bottom: 5px;
   right: 15px;
-  color: gray;
 }
 
 /* ----------RESULTS COMPONENT---------- */
