--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -51,6 +51,10 @@
   justify-content: space-between;
 }
 
+.align-items-c {
+  align-items: center;
+}
+
 .pos-rel {
   position: relative;
 }
@@ -77,6 +81,19 @@
 
 .bdr-radius-t-r-20px {
   border-top-right-radius: 20px;
+}
+
+.ft-18px {
+  font-size: 18px;
+}
+
+.ft-16px {
+  font-size: 16px;
+  color: gray;
+}
+
+.txt-gray {
+  color: gray;
 }
 
 .btn {
