Clean CSS for 'saved-events.jsx' #5.

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -63,8 +63,18 @@
   position: absolute;
 }
 
-.bdr-radius-20px {
+.border-radius {
   border-radius: 20px;
+}
+
+.border-radius-b {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.border-radius-t {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 .bdr-radius-b-l-20px {
